--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,6 @@ This volume starts with the first new Beatle song, “Free as a Bird” (based o
 
     <!-- Message for textview in case of errors  -->
     <string name="computationError">Error</string>
+    <string name="hello_world">Hello World!</string>
+    <string name="change_color">Change Color</string>
 </resources>
