--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,8 @@ This volume starts with the first new Beatle song, “Free as a Bird” (based o
     <string name="computationError">Error</string>
     <string name="hello_world">Hello World!</string>
     <string name="change_color">Change Color</string>
+
+    <string name="hint_word">Word...</string>
+    <string name="button_save">Save</string>
+    <string name="empty_not_saved">Word not saved because it is empty.</string>
 </resources>
